Various layouts for frames, static UI example

--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 
 <body>
-  <div class="container"></div>
+  <div class="container">
+
+    <div class="layout layout-frames layout-2x1">
+      <iframe class="item item-1" src="http://example.com"></iframe>
+      <iframe class="item item-2" src="http://example.com"></iframe>
+      <iframe class="item item-3" src="http://example.com"></iframe>
+      <!-- <iframe class="item item-3" src="http://example.com"></iframe> -->
+    </div>
+
+  </div>
 
   <script src="vendor/assets/js/jquery.js"></script>
   <script src="assets/js/main.js"></script>
