JS view to render a layout to frames, with supporting layout classes

--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
 <body>
   <div class="container">
 
-    <div class="layout layout-frames layout-2x1">
-      <iframe class="item item-1" src="http://example.com"></iframe>
-      <iframe class="item item-2" src="http://example.com"></iframe>
-      <iframe class="item item-3" src="http://example.com"></iframe>
-      <!-- <iframe class="item item-3" src="http://example.com"></iframe> -->
+    <div class="layout layout-frames">
     </div>
 
   </div>
 
   <script src="vendor/assets/js/jquery.js"></script>
   <script src="assets/js/main.js"></script>
+
+  <script>
+    var view = new FrameView($('.container .layout'));
+    view.render('2x2', [
+      'http://example.com',
+      'http://example.com',
+      'http://example.com',
+      'http://example.com'
+    ]);
+  </script>
 </body>
 </html>
