--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   </div>
 
   <script src="vendor/assets/js/jquery.js"></script>
+  <script src="vendor/assets/js/query-param.js"></script>
   <script src="assets/js/main.js"></script>
 
   <script>
-    var view = new FrameView($('.container .layout'));
-    view.render('2x2', [
-      'http://example.com',
-      'http://example.com',
-      'http://example.com',
-      'http://example.com'
-    ]);
+  $(function() {
+    var view = new FrameView($('.container .layout')),
+      params = getQueryParams(document.location.search);
+
+    view.render(params.layout, params.url);
+  });
   </script>
 </body>
 </html>
