Add a new layout type
Good example of how easy it is to add layouts

--- a/build.html
+++ b/build.html
@@ -56,6 +56,13 @@
             <span>2x1</span>
           </label>
         </li>
+
+        <li>
+          <label for="layout-2x1ish">
+            <input type="radio" id="layout-2x1ish" name="layout" value="2x1ish">
+            <span>2x1</span>
+          </label>
+        </li>
       </ol>
     </section>
 
