Add a 1x2 for Edds

--- a/build.html
+++ b/build.html
@@ -60,7 +60,14 @@
         <li>
           <label for="layout-2x1ish">
             <input type="radio" id="layout-2x1ish" name="layout" value="2x1ish">
-            <span>2x1</span>
+            <span>2x1ish</span>
+          </label>
+        </li>
+
+        <li>
+          <label for="layout-1x2">
+            <input type="radio" id="layout-1x2" name="layout" value="1x2">
+            <span>1x2</span>
           </label>
         </li>
       </ol>
