Add top banner plus 3 column layout.

--- a/build.html
+++ b/build.html
@@ -70,6 +70,13 @@
             <span>1x2</span>
           </label>
         </li>
+
+        <li>
+          <label for="layout-banner-plus-3col">
+            <input type="radio" id="layout-banner-plus-3col" name="layout" value="banner-plus-3col">
+            <span>banner-plus-3col</span>
+          </label>
+        </li>
       </ol>
     </section>
 
