Allow document title to be set by query param
So the title can be used to disambiguate many frame split tabs, and/or
can be bookmarked with a meaninful name.

Expose it in the build interface too.

--- a/build.html
+++ b/build.html
@@ -11,7 +11,11 @@
 <body class="build">
   <div class="container">
   <form action="./index.html">
-
+    <section class="title">
+      <h2>About the frame-split</h2>
+      <label for="title">Title</label>
+      <input type="text" id="title" name="title" value="" placeholder="'My fancy graphs', 'My teams radiator'" />
+    </section>
     <section class="layouts">
       <h2>Pick Layout</h2>
       <ol>
