--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     var view = new FrameView($('.container .layout')),
       params = getQueryParams(document.location.search);
 
-    view.render(params.layout, params.url);
+    view.render(params.layout, params.url, params.title);
   });
   </script>
 </body>
