Add a new split with a big sidebar
We need more splits but have a tall panel we want to keep with 100%
height.

--- a/build.html
+++ b/build.html
@@ -62,6 +62,13 @@
         </li>
 
         <li>
+          <label for="layout-sidebar-plus-3row">
+            <input type="radio" id="layout-sidebar-plus-3row" name="layout" value="sidebar-plus-3row">
+            <span>sidebar-plus-3row</span>
+          </label>
+        </li>
+
+        <li>
           <label for="layout-2x1ish">
             <input type="radio" id="layout-2x1ish" name="layout" value="2x1ish">
             <span>2x1ish</span>
