Add 75/25 2col layout.
We've often encountered a need to display a wider screen alongside a
narrower column. This adds a layout to support this.

--- a/build.html
+++ b/build.html
@@ -34,6 +34,13 @@
         </li>
 
         <li>
+          <label for="layout-2col-75-25">
+            <input type="radio" id="layout-2col-75-25" name="layout" value="2col-75-25">
+            <span>2col-75-25</span>
+          </label>
+        </li>
+
+        <li>
           <label for="layout-3row">
             <input type="radio" id="layout-3row" name="layout" value="3row">
             <span>3row</span>
